--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -1,104 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/product_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="true"
+    android:layout_margin="8dp"
+    android:clickable="false"
     android:focusable="true"
-    android:orientation="vertical"
-    app:cardCornerRadius="2dp">
+    app:cardElevation="0dp"
+    app:strokeColor="#CCCCCC"
+    app:strokeWidth="1dp">
 
 
-    <LinearLayout
-        android:id="@+id/lyt_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?selectableItemBackground"
-        android:orientation="horizontal"
-        android:paddingVertical="7dp">
+        android:layout_margin="8dp">
 
-
-        <com.google.android.material.imageview.ShapeableImageView
+        <ImageView
             android:id="@+id/item_image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="5dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/round_outline_rect"
+            android:contentDescription="@string/add_img_item_desc"
+            android:scaleType="centerCrop"
             android:src="@drawable/plantimage"
-            app:shapeAppearance="@style/circleImage" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/item_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:lines="2"
+            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
+            app:layout_constraintStart_toEndOf="@+id/item_image"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="some title may be two lines" />
 
-
-            <TextView
-                android:id="@+id/item_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="3dp"
-                android:fontFamily="sans-serif"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:text="@string/hint_plant_name"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/item_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                tools:text="@string/hint_price" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
+        <ImageButton
+            android:id="@+id/btn_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/btn_favorite"
-                    style="@style/Widget.Material3.Button.IconButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_favorite"/>
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_delete"
-                    style="@style/Widget.Material3.Button.IconButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:icon="@drawable/ic_delete"
-                    app:iconGravity="end"
-                    app:iconSize="25dp" />
-            </LinearLayout>
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/round_button"
+            android:backgroundTint="#FFFFFF"
+            android:contentDescription="@string/pro_details_like_btn_desc"
+            android:scaleType="center"
+            app:layout_constraintBottom_toBottomOf="@+id/item_name"
+            app:layout_constraintEnd_toStartOf="@+id/btn_delete"
+            app:layout_constraintTop_toTopOf="@+id/item_name"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/ic_favorite" />
+
+        <ImageButton
+            android:id="@+id/btn_delete"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/round_button"
+            android:contentDescription="@string/pro_details_delete_btn_desc"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_favorite"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/btn_favorite"
+            app:srcCompat="@drawable/ic_delete"
+            app:tint="@color/gray" />
+
+        <TextView
+            android:id="@+id/item_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="8dp"
+            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
+            android:textColor="@color/md_theme_light_primary"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/item_image"
+            app:layout_constraintTop_toBottomOf="@+id/item_name"
+            app:layout_constraintVertical_bias="1.0"
+            tools:text="$1234.56" />
+
+        <LinearLayout
+            android:id="@+id/cart_item_quantity_buttons_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/layout_background_rounded_corners"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="@id/item_price"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@id/item_price"
+            app:layout_constraintTop_toTopOf="@+id/item_price"
+            app:layout_constraintVertical_bias="1.0">
+
+            <ImageButton
+                android:id="@+id/cart_item_minus_btn"
+                android:layout_width="36dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:contentDescription="@string/minus_btn_desc"
+                app:srcCompat="@drawable/ic_remove_24" />
+
+            <TextView
+                android:id="@+id/cart_item_quantity_text_View"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/blue_shadow_color"
+                android:gravity="center_horizontal|center_vertical"
+                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                tools:text="123" />
+
+            <ImageButton
+                android:id="@+id/cart_item_plus_btn"
+                android:layout_width="36dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:contentDescription="@string/plus_btn_desc"
+                app:srcCompat="@drawable/ic_add_24" />
 
         </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginHorizontal="10dp"
-        android:background="#878A8A" />
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
