--- a/app/src/main/res/menu/admin_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/admin_bottom_nav_menu.xml
@@ -8,6 +8,6 @@
 
     <item
         android:id="@+id/navigation_fragment_accessory"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/tools"
         android:title="@string/str_accessory" />
 </menu>
