--- a/app/src/main/res/menu/user_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/user_bottom_nav_menu.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/navigation_fragment_accessory"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/tools"
         android:title="@string/str_accessory" />
 
 
