--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="md_theme_light_primary">#005AC1</color>
+<!--    <color name="md_theme_light_primary">#005AC1</color>-->
+    <color name="md_theme_light_primary">#00b050</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
     <color name="md_theme_light_primaryContainer">#D8E2FF</color>
     <color name="md_theme_light_onPrimaryContainer">#001A41</color>
@@ -67,4 +68,12 @@
 
     <color name="bg_color">#7EADB8B8</color>
     <color name="colorDarkBlue3">#1A565A7B</color>
+
+<!--    added by hesham and abdu-->
+    <color name="white">#FFFFFFFF</color>
+    <color name="blue_shadow_color">#B9DADF</color>
+    <color name="light_gray">#CCCCCC</color>
+<!--    <color name="blue_accent_300">#02d5ee</color>-->
+    <color name="gray">#505050</color>
+    <color name="transparent">#00000000</color>
 </resources>
