--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="@string/signup_welcome_text"
-            android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/singup_image_view"
