--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -42,7 +42,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:lines="2"
-            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
             app:layout_constraintStart_toEndOf="@+id/item_image"
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="8dp"
-            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             android:textColor="@color/md_theme_light_primary"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -123,7 +123,7 @@
                 android:layout_weight="1"
                 android:background="@color/blue_shadow_color"
                 android:gravity="center_horizontal|center_vertical"
-                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 tools:text="123" />
