--- a/app/src/main/res/menu/admin_drawer_view_menu.xml
+++ b/app/src/main/res/menu/admin_drawer_view_menu.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <item android:title="Main">
+    <item android:title="">
         <menu>
             <item
                 android:id="@+id/drawer_menu_users_user_details"
