--- a/app/src/main/res/layout/accessory_layout.xml
+++ b/app/src/main/res/layout/accessory_layout.xml
@@ -25,7 +25,7 @@
             android:scaleType="centerCrop"
             android:transitionName="example_transition"
             android:layout_gravity="center"
-            android:src="@drawable/test" />
+            android:src="@drawable/tools" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -63,7 +63,6 @@
                 android:maxLines="1"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/accessory_type"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/accessory_name" />
@@ -80,6 +79,8 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textSize="14sp"
+                app:layout_constraintStart_toEndOf="@+id/accessory_price"
+                app:layout_constraintHorizontal_bias="1"
                 app:layout_constraintEnd_toStartOf="@+id/accessory_options"
                 app:layout_constraintTop_toBottomOf="@+id/accessory_name" />
 
@@ -88,13 +89,14 @@
                 android:id="@+id/description"
                 style="@style/TextAppearance.AppCompat.Headline"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginHorizontal="5dp"
                 android:ellipsize="end"
-                android:maxLines="1"
                 android:gravity="start"
+                android:maxLines="3"
                 android:text="@string/hint_description"
                 android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/accessory_options"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/accessory_price" />
