--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="end"
-        app:headerLayout="@layout/admin_nav_header"
+        app:headerLayout="@layout/nav_header"
         app:itemMaxLines="2"
         app:menu="@menu/admin_drawer_view_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
