--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -25,84 +25,33 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <TextView
-            android:id="@+id/from"
-            android:layout_width="wrap_content"
+            android:id="@+id/contact_us"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="5dp"
-            android:text="@string/user_from"
-            android:textSize="18sp"
-            android:textColor="?attr/colorPrimary"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-
-
-
-
-        <TextView
-            android:id="@+id/from_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="20dp"
-            android:text="@string/str_name"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/from"/>
-
-
-
-
-        <TextView
-            android:id="@+id/from_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="20dp"
-            android:text="@string/hint_email"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/from_name"/>
-
-
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/message_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
-            android:layout_marginHorizontal="8dp"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:text="@string/contact_us_title"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/from_email">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/message_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top|start"
-                android:minLines="6"
-                android:hint="@string/hint_message" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btn_open_mail"/>
 
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_send"
+            android:id="@+id/btn_open_mail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
+            style="@style/Widget.Material3.Button.ElevatedButton"
             android:paddingVertical="15dp"
-            android:text="@string/str_send"
+            android:text="@string/str_contact_mail"
             app:cornerRadius="10dp"
+            app:icon="@drawable/ic_mail"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/message_layout"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
