--- a/app/src/main/res/layout/fragment_accessory.xml
+++ b/app/src/main/res/layout/fragment_accessory.xml
@@ -52,7 +52,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/options_layout"
-            tools:listitem="@layout/user_accessory_layout" />
+            tools:listitem="@layout/accessory_layout" />
 
 
         <LinearLayout
