--- a/app/src/main/res/menu/user_drawer_view_menu.xml
+++ b/app/src/main/res/menu/user_drawer_view_menu.xml
@@ -20,11 +20,23 @@
 
 
 
+            <item
+                android:id="@+id/drawer_menu_feedback"
+                android:icon="@drawable/ic_feedback"
+                android:title="@string/str_feedback" />
+
 
             <item
                 android:id="@+id/drawer_menu_contact_us"
                 android:icon="@drawable/ic_contact"
                 android:title="@string/str_contact_us" />
+
+
+
+            <item
+                android:id="@+id/drawer_menu_help"
+                android:icon="@drawable/ic_help"
+                android:title="@string/str_help" />
 
 
             <item
