--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,79 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    <color name="md_theme_light_primary">#005AC1</color>-->
-    <color name="md_theme_light_primary">#00b050</color>
+    <color name="seed">#00b050</color>
+    <color name="md_theme_light_primary">#006E2F</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#D8E2FF</color>
-    <color name="md_theme_light_onPrimaryContainer">#001A41</color>
-    <color name="md_theme_light_secondary">#535E78</color>
+    <color name="md_theme_light_primaryContainer">#71FE93</color>
+    <color name="md_theme_light_onPrimaryContainer">#002109</color>
+    <color name="md_theme_light_secondary">#006E2F</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#D8E2FF</color>
-    <color name="md_theme_light_onSecondaryContainer">#0F1B32</color>
-    <color name="md_theme_light_tertiary">#76517B</color>
+    <color name="md_theme_light_secondaryContainer">#95F8A5</color>
+    <color name="md_theme_light_onSecondaryContainer">#002109</color>
+    <color name="md_theme_light_tertiary">#39656D</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#FED6FF</color>
-    <color name="md_theme_light_onTertiaryContainer">#2D0E34</color>
+    <color name="md_theme_light_tertiaryContainer">#BDEAF3</color>
+    <color name="md_theme_light_onTertiaryContainer">#001F24</color>
     <color name="md_theme_light_error">#BA1A1A</color>
-    <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FEFBFF</color>
-    <color name="md_theme_light_onBackground">#1B1B1F</color>
-    <color name="md_theme_light_surface">#FEFBFF</color>
-    <color name="md_theme_light_onSurface">#1B1B1F</color>
-    <color name="md_theme_light_surfaceVariant">#E1E2EC</color>
-    <color name="md_theme_light_onSurfaceVariant">#44474F</color>
-    <color name="md_theme_light_outline">#74777F</color>
+    <color name="md_theme_light_background">#FCFDF7</color>
+    <color name="md_theme_light_onBackground">#1A1C19</color>
+    <color name="md_theme_light_surface">#FCFDF7</color>
+    <color name="md_theme_light_onSurface">#1A1C19</color>
+    <color name="md_theme_light_surfaceVariant">#DDE5DA</color>
+    <color name="md_theme_light_onSurfaceVariant">#414941</color>
+    <color name="md_theme_light_outline">#727970</color>
+    <color name="md_theme_light_inverseOnSurface">#F0F1EC</color>
+    <color name="md_theme_light_inverseSurface">#2E312E</color>
+    <color name="md_theme_light_inversePrimary">#52E079</color>
     <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_inverseSurface">#303033</color>
-    <color name="md_theme_light_inverseOnSurface">#F2F0F4</color>
-    <color name="md_theme_light_inversePrimary">#ADC6FF</color>
-    <color name="md_theme_light_surfaceTint">#005AC1</color>
-    <color name="md_theme_light_surfaceTintColor">#005AC1</color>
-    <color name="seed">#4285F4</color>
-    <color name="md_theme_dark_primary">#ADC6FF</color>
-    <color name="md_theme_dark_onPrimary">#002E69</color>
-    <color name="md_theme_dark_primaryContainer">#004494</color>
-    <color name="md_theme_dark_onPrimaryContainer">#D8E2FF</color>
-    <color name="md_theme_dark_secondary">#BBC6E4</color>
-    <color name="md_theme_dark_onSecondary">#253048</color>
-    <color name="md_theme_dark_secondaryContainer">#3B475F</color>
-    <color name="md_theme_dark_onSecondaryContainer">#D8E2FF</color>
-    <color name="md_theme_dark_tertiary">#E5B8E8</color>
-    <color name="md_theme_dark_onTertiary">#44244A</color>
-    <color name="md_theme_dark_tertiaryContainer">#5D3A62</color>
-    <color name="md_theme_dark_onTertiaryContainer">#FED6FF</color>
+    <color name="md_theme_light_surfaceTint">#006E2F</color>
+    <color name="md_theme_light_outlineVariant">#C1C9BE</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#52E079</color>
+    <color name="md_theme_dark_onPrimary">#003915</color>
+    <color name="md_theme_dark_primaryContainer">#005322</color>
+    <color name="md_theme_dark_onPrimaryContainer">#71FE93</color>
+    <color name="md_theme_dark_secondary">#79DB8B</color>
+    <color name="md_theme_dark_onSecondary">#003915</color>
+    <color name="md_theme_dark_secondaryContainer">#005322</color>
+    <color name="md_theme_dark_onSecondaryContainer">#95F8A5</color>
+    <color name="md_theme_dark_tertiary">#A1CED7</color>
+    <color name="md_theme_dark_onTertiary">#00363D</color>
+    <color name="md_theme_dark_tertiaryContainer">#1F4D55</color>
+    <color name="md_theme_dark_onTertiaryContainer">#BDEAF3</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
-    <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
-    <color name="md_theme_dark_onErrorContainer">#FFB4AB</color>
-    <color name="md_theme_dark_background">#1B1B1F</color>
-    <color name="md_theme_dark_onBackground">#E3E2E6</color>
-    <color name="md_theme_dark_surface">#1B1B1F</color>
-    <color name="md_theme_dark_onSurface">#E3E2E6</color>
-    <color name="md_theme_dark_surfaceVariant">#44474F</color>
-    <color name="md_theme_dark_onSurfaceVariant">#C4C6D0</color>
-    <color name="md_theme_dark_outline">#8E9099</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#1A1C19</color>
+    <color name="md_theme_dark_onBackground">#E2E3DD</color>
+    <color name="md_theme_dark_surface">#1A1C19</color>
+    <color name="md_theme_dark_onSurface">#E2E3DD</color>
+    <color name="md_theme_dark_surfaceVariant">#414941</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C1C9BE</color>
+    <color name="md_theme_dark_outline">#8B9389</color>
+    <color name="md_theme_dark_inverseOnSurface">#1A1C19</color>
+    <color name="md_theme_dark_inverseSurface">#E2E3DD</color>
+    <color name="md_theme_dark_inversePrimary">#006E2F</color>
     <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_inverseSurface">#E3E2E6</color>
-    <color name="md_theme_dark_inverseOnSurface">#303033</color>
-    <color name="md_theme_dark_inversePrimary">#005AC1</color>
-    <color name="md_theme_dark_surfaceTint">#ADC6FF</color>
-    <color name="md_theme_dark_surfaceTintColor">#ADC6FF</color>
+    <color name="md_theme_dark_surfaceTint">#52E079</color>
+    <color name="md_theme_dark_outlineVariant">#414941</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 
 
-    <!--    my colors-->
-    <color name="waiting_for_accept_color">#4D55C37A</color>
-
-
-    <color name="bg_color">#7EADB8B8</color>
-    <color name="colorDarkBlue3">#1A565A7B</color>
-
-<!--    added by hesham and abdu-->
-    <color name="white">#FFFFFFFF</color>
-    <color name="blue_shadow_color">#B9DADF</color>
     <color name="light_gray">#CCCCCC</color>
-<!--    <color name="blue_accent_300">#02d5ee</color>-->
-    <color name="gray">#505050</color>
-    <color name="transparent">#00000000</color>
+    <color name="tab_indicator_gray">#c0c0c0</color>
+
+    <color name="white">#FFFFFFFF</color>
 </resources>
